--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="social-links mt-3 text-center">
           <p>Hubungi Kami</p>
           <a href="https://wa.me/+6285229386864" class="twitter"><i class="bx bxl-whatsapp" ></i></a>
-          <a href="mailto:nanosuksesbersama@example.com" class="email">
+          <a href="mailto:nanosuksesbersama@gmail.com" class="email">
   <i class="bx bx-envelope"></i>
 </a>
         </div>
@@ -94,7 +94,7 @@
 
         <div class="section-title">
           <h2>Tentang Kami</h2>
-          <p justify-content-center>PT. Nano Sukses Bersama adalah perusahaan konssultan perencanaan bidang mekanikal, elektrikal dan plumbing. Dengan semangat bersama yang berawal dari pengalaman sebagai pondasi dan filosofi kami dalam berkerja. 
+          <p justify-content-center>PT. Nano Sukses Bersama adalah perusahaan konsultan perencanaan bidang mekanikal, elektrikal dan plumbing. Dengan semangat bersama yang berawal dari pengalaman sebagai pondasi dan filosofi kami dalam berkerja. 
          </p>
         </div>
 
@@ -293,7 +293,72 @@
           <h4><a href="#">PT. Kreatif</a></h4>
         </div>
       </div>
-      
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">PT Struclab Jaya Konsultindo</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">PT Saka Surya Wisesa</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">Bire Studio</a></h4>
+        </div>
+      </div>
+       <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">Ruang Nyaman</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">Savvy Structure Design</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">A+P Grup</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">PT Eragon Sukses Bersama</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">Entertainment Distric Indonesia</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">PT Husin Teknik Pratama</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">PT Panca Wisesa Adhika</a></h4>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="icon-box d-flex flex-column justify-content-center align-items-center text-center p-3 shadow-sm bg-white rounded" style="min-height: 150px;">
+          <i class="bi bi-briefcase fs-1 text-primary"></i>
+          <h4><a href="#">PT Agung Podomoro Land</a></h4>
+        </div>
+      </div>
       <!-- Tambahkan partner tambahan di bawah ini dengan format yang sama -->
     </div>
   </div>
@@ -363,6 +428,30 @@
           <li> <span>Desain MEP Perumahan Onyx Alam Sutera</span></li>
           <li> <span>Desain MEP Ryan House Kelapa Gading</span></li>
           <li> <span>Desain MEP SA House Pamulang</span></li>
+          <li><span>Desain MEP Mess Wirambara TNI AU Yogyakarta</span></li>
+          <li><span>Desain MEP Infrastruktur BTN Ecopark Gandul</span></li>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="project-box">
+          <h4>2024</h4>
+          <li> <span>Desain MEP Island Villa Navapark - BSD</span></li>
+          <li> <span>Desain MEP Botanic Villa Navapark - BSD</span></li>
+          <li> <span>Desain MEP Hope Academy PIK 2</span></li>
+          <li> <span>Desain MEP Sekolah Dian Harapan- Karawang</span></li>
+          <li> <span>Desain MEP Hotel Cordela - Tangerang</span></li>
+          <li> <span>Desain MEP Office Rancamaya</span></li>
+          <li><span>Desain MEP Entertainment Distric PIK 2</span></li>
+          <li><span>Desain MEP Seqoia Falls - Bogor</span></li>
+        </div>
+      </div>
+       <div class="col-lg-4 col-md-6 mb-4">
+        <div class="project-box">
+          <h4>2025</h4>
+          <li> <span>Desain MEP Villa Bali Investment - Bali</span></li>
+          <li> <span>Desain MEP Art Villa - Bali</span></li>
+          <li> <span>Desain MEP Kavling & Sportclub Nagasakti Pekanbaru</span></li>
+          <li> <span>Desain MEP Mytax Office - PIK</span></li>
         </div>
       </div>
      
